# vscode-haskell

./: .gitignore  .vscodeignore  installation.md  package.json  test.txt  todo.md
haskell-src/: AnnsViewer.hs  BasicParserServer.hs  HaskellLexerParserServer.hs  HaskellLexerParserServerJson.hs  HaskellLexerServer.hs  zmq-test.hs
haskell-src/data/: Bad.hs  BadLexer.hs  HelloWorld.clj  HelloWorld.hs  HelloWorld2.hs  ghc-dump-tree.json  out.json
haskell-src/data/output/: out-HaskellLexerParserServerJson-HelloWorld.json  out-hlpsj-Bad.json  out-hlpsj-BadLexer.json  out-hlpsj-HelloWorld2.json  out-hlsj-HelloWorld2.json
haskell-src/ghc-engine/: dummy  ghc-engine.cabal
haskell-src/ghc-engine/src/: HaskellLexerParserServerJson.hs  HaskellLexerServerJson.hs  Main.hs  Util.hs
haskell-src/ghc-engine/src/Language/Haskell/GHC/: DumpTree.hs
haskell-src/ghc-engine/test/data/: out-parser-error.json  out2.json
haskell-src/ghc-engine/test/data/output/: lexed-and-parsed.json  lexing.json  out-ghc-engine-HelloWorld.json  out-parser-error.json
lib/: objectUtils.js  parser.js  reader.js
src/: decorator.ts  extension.ts  zmq.ts
tests/: reader-test.js
tests/data/: HelloWorld-expected.json  HelloWorld-expected2.json  ghc-engine-out.json
