name:                ghc-engine
version:             0.1.0.0
synopsis:            provide Tokens, ASTs, ...
category:            Development
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC==7.4.2, GHC==7.8.3, GHC==7.10.3

executable ghc-engine
  main-is:             Main.hs
  build-depends:       base                 >=4.5  && <4.9,
                       aeson                >=0.7  && <0.11,
                       bytestring           >=0.9  && <0.11,
                       ghc                  >=7.4  && <7.12,
                       ghc-paths            >=0.1.0.9,
                       zeromq4-haskell      >=0.6.4,
                       utf8-string          >=1.0.1.1,
                       time                 >=1.5.0.1,
                       template-haskell     >=2.10.0.0,
                       optparse-applicative >=0.11 && <0.13,
                       pretty               >=1.1  && <1.2,
                       pretty-show          >=1.6  && <1.7,
                       process              >=1.1  && <1.3,
                       unordered-containers >=0.2  && <0.3,
                       vector               >=0.10 && <0.12
  hs-source-dirs:      src
  other-modules:       Language.Haskell.GHC.DumpTree
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-orphans
  other-extensions:    CPP
  default-extensions:  RecordWildCards
                       OverloadedStrings
